--- a/.github/workflows/leftover-spaces-cleaner.yaml
+++ b/.github/workflows/leftover-spaces-cleaner.yaml
@@ -10,10 +10,10 @@ jobs:
     runs-on: ubuntu-latest
     name: Leftover spaces cleanup 
     steps:
-    - uses: actions/checkout@v4
+    - uses: actions/checkout@08eba0b27e820071cde6df949e0beb9ba4906955 # v4.3.0
 
     - name: Set up Go
-      uses: actions/setup-go@v4
+      uses: actions/setup-go@19bb51245e9c80abacb2e91cc42b33fa478b8639 # v4.2.1
       with:
         go-version: '1.24'
 
