--- a/.github/workflows/tests-forks.yaml
+++ b/.github/workflows/tests-forks.yaml
@@ -1,6 +1,6 @@
 name: Run Test (forks & dependabot)
 on:
-  pull_request_target:
+  pull_request:
     types: [opened, synchronize, reopened, labeled]
 
 # https://docs.github.com/en/actions/security-guides/automatic-token-authentication#permissions-for-the-github_token
@@ -23,6 +23,7 @@ jobs:
     steps:
       - uses: actions/checkout@v4
         with:
+          ref: ${{ github.event.pull_request.head.sha }}
           persist-credentials: false
       - name: remove labels
         run: |
