Update Mondoo client image and tag in config

--- a/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
+++ b/config/samples/k8s_v1alpha2_mondooauditconfig.yaml
@@ -14,8 +14,8 @@ spec:
   scanner:
     serviceAccountName: mondoo-client
     image:
-      name: docker.io/mondoo/client
-      tag: latest
+      name: ghcr.io/mondoo/cnspec
+      tag: latest-rootless
     resources:
       requests:
       limits:
