--- a/charts/mondoo-operator/values.yaml
+++ b/charts/mondoo-operator/values.yaml
@@ -5,6 +5,8 @@ controllerManager:
     - --health-probe-bind-address=:8081
     - --metrics-bind-address=:8080
     - --leader-elect
+    podSecurityContext:
+      runAsNonRoot: true
     containerSecurityContext:
       allowPrivilegeEscalation: false
       capabilities:
