Use the defined golang version in security tests
Avoid golang 1.25

Signed-off-by: Tim Smith <tsmith84@gmail.com>

--- a/.github/workflows/security-tests.yaml
+++ b/.github/workflows/security-tests.yaml
@@ -30,7 +30,7 @@ jobs:
       - name: Install Go
         uses: actions/setup-go@4dc6199c7b1a012772edbd06daecab0f50c9053c # v6.1.0
         with:
-          go-version: ">=${{ env.golang-version }}"
+          go-version: "${{ env.golang-version }}"
           cache: false
       - name: Scan AWS terraform with Mondoo
         uses: mondoohq/actions/terraform-hcl@main
