--- a/charts/mondoo-operator/templates/deployment.yaml
+++ b/charts/mondoo-operator/templates/deployment.yaml
@@ -1,24 +1,3 @@
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ include "mondoo-operator.fullname" . }}-controller-manager
-  labels:
-  {{- include "mondoo-operator.labels" . | nindent 4 }}
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ include "mondoo-operator.fullname" . }}-k8s-resources-scanning
-  labels:
-  {{- include "mondoo-operator.labels" . | nindent 4 }}
----
-apiVersion: v1
-kind: ServiceAccount
-metadata:
-  name: {{ include "mondoo-operator.fullname" . }}-webhook
-  labels:
-  {{- include "mondoo-operator.labels" . | nindent 4 }}
----
 apiVersion: apps/v1
 kind: Deployment
 metadata:
@@ -76,7 +55,7 @@ spec:
           }}
         securityContext: {{- toYaml .Values.controllerManager.manager.containerSecurityContext
           | nindent 10 }}
-      securityContext:
-        runAsNonRoot: true
+      securityContext: {{- toYaml .Values.controllerManager.podSecurityContext | nindent
+        8 }}
       serviceAccountName: {{ include "mondoo-operator.fullname" . }}-controller-manager
       terminationGracePeriodSeconds: 10
