🧹 release helm chart only after tests and a tag
Signed-off-by: Ivan Milchev <ivan@mondoo.com>

--- a/.github/workflows/publish.yaml
+++ b/.github/workflows/publish.yaml
@@ -318,6 +318,7 @@ jobs:
     name: Release helm chart
     needs:
       - push-virtual-tag
+      - run-helm-tests
     runs-on: ubuntu-latest
 
     permissions:
