--- a/.github/workflows/release-manifests.yaml
+++ b/.github/workflows/release-manifests.yaml
@@ -28,4 +28,5 @@ jobs:
         uses: softprops/action-gh-release@a06a81a03ee405af7f2048a818ed3f03bbf83c7b # v2.5.0
         with:
           files: mondoo-operator-manifests.yaml
-          generate_release_notes: true
+          generate_release_notes: false
+          make_latest: true
