--- a/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondooauditconfigs.yaml
@@ -39,57 +39,6 @@ spec:
           spec:
             description: MondooAuditConfigSpec defines the desired state of MondooAuditConfig
             properties:
-              admission:
-                properties:
-                  certificateProvisioning:
-                    description: CertificateProvisioning defines the certificate provisioning
-                      configuration within the cluster.
-                    properties:
-                      mode:
-                        default: manual
-                        description: CertificateProvisioningMode is the specified
-                          method the cluster uses for provisioning TLS certificates
-                        enum:
-                        - cert-manager
-                        - openshift
-                        - manual
-                        type: string
-                    type: object
-                  enable:
-                    type: boolean
-                  image:
-                    properties:
-                      name:
-                        type: string
-                      tag:
-                        type: string
-                    type: object
-                  mode:
-                    default: permissive
-                    description: |-
-                      Mode represents whether the webhook will behave in a "permissive" mode (the default) which
-                      will only scan and report on k8s resources or "enforcing" mode where depending
-                      on the scan results may reject the k8s resource creation/modification.
-                    enum:
-                    - permissive
-                    - enforcing
-                    type: string
-                  replicas:
-                    default: 1
-                    description: |-
-                      Number of replicas for the admission webhook.
-                      For enforcing mode, the minimum should be two to prevent problems during Pod failures,
-                      e.g. node failure, node scaling, etc.
-                    format: int32
-                    minimum: 1
-                    type: integer
-                  serviceAccountName:
-                    default: mondoo-operator-webhook
-                    description: |-
-                      ServiceAccountName specifies the Kubernetes ServiceAccount the webhook should use
-                      during its operation.
-                    type: string
-                type: object
               consoleIntegration:
                 properties:
                   enable:
@@ -646,7 +595,7 @@ spec:
               scanner:
                 description: |-
                   Scanner defines the settings for the Mondoo scanner that will be running in the cluster. The same scanner
-                  is used for scanning the Kubernetes API, the nodes and for serving the admission controller.
+                  is used for scanning the Kubernetes API and the nodes.
                 properties:
                   env:
                     description: |-
