--- a/config/manager/kustomization.yaml
+++ b/config/manager/kustomization.yaml
@@ -2,17 +2,17 @@
 # SPDX-License-Identifier: BUSL-1.1
 
 resources:
-  - manager.yaml
-  - metrics-service.yaml
+- manager.yaml
+- metrics-service.yaml
 generatorOptions:
   disableNameSuffixHash: true
 configMapGenerator:
-  - files:
-      - controller_manager_config.yaml
-    name: manager-config
+- files:
+  - controller_manager_config.yaml
+  name: manager-config
 apiVersion: kustomize.config.k8s.io/v1beta1
 kind: Kustomization
 images:
-  - name: controller
-    newName: ghcr.io/mondoohq/mondoo-operator
-    newTag: v12.0.1
+- name: controller
+  newName: ghcr.io/mondoohq/mondoo-operator
+  newTag: sha256-f11f20b32b7abef03154ecefdb14fdf3cdfdca1d.sig
