--- a/config/crd/bases/k8s.mondoo.com_mondoooperatorconfigs.yaml
+++ b/config/crd/bases/k8s.mondoo.com_mondoooperatorconfigs.yaml
@@ -48,6 +48,37 @@ spec:
                 description: HttpProxy specifies a proxy to use for HTTP requests
                   to the Mondoo Platform.
                 type: string
+              httpsProxy:
+                description: HttpsProxy specifies a proxy to use for HTTPS requests
+                  to the Mondoo Platform.
+                type: string
+              imagePullSecrets:
+                description: |-
+                  ImagePullSecrets specifies the name of the Secret to use for pulling images for all Mondoo components.
+                  The secret must be of type kubernetes.io/dockerconfigjson.
+                items:
+                  description: |-
+                    LocalObjectReference contains enough information to let you locate the
+                    referenced object inside the same namespace.
+                  properties:
+                    name:
+                      default: ""
+                      description: |-
+                        Name of the referent.
+                        This field is effectively required, but due to backwards compatibility is
+                        allowed to be empty. Instances of this type with an empty value here are
+                        almost certainly wrong.
+                        More info: https://kubernetes.io/docs/concepts/overview/working-with-objects/names/#names
+                      type: string
+                  type: object
+                  x-kubernetes-map-type: atomic
+                type: array
+              imageRegistry:
+                description: |-
+                  ImageRegistry specifies a custom container image registry to use for all Mondoo images.
+                  This allows using a private registry mirror (e.g., artifactory.example.com/ghcr.io.docker).
+                  If set, all image references will be prefixed with this registry.
+                type: string
               metrics:
                 description: Metrics controls the enabling/disabling of metrics report
                   of mondoo-operator
@@ -62,6 +93,10 @@ spec:
                       resources (eg. ServiceMonitor)
                     type: object
                 type: object
+              noProxy:
+                description: NoProxy specifies a comma-separated list of hosts that
+                  should not use the proxy.
+                type: string
               skipContainerResolution:
                 description: Allows skipping Image resolution from upstream repository
                 type: boolean
