--- a/charts/mondoo-operator/crds/mondooauditconfig-crd.yaml
+++ b/charts/mondoo-operator/crds/mondooauditconfig-crd.yaml
@@ -1,22 +1,11 @@
+---
 apiVersion: apiextensions.k8s.io/v1
 kind: CustomResourceDefinition
 metadata:
-  name: mondooauditconfigs.k8s.mondoo.com
   annotations:
-    controller-gen.kubebuilder.io/version: v0.19.0
-  labels:
-  {{- include "mondoo-operator.labels" . | nindent 4 }}
+    controller-gen.kubebuilder.io/version: v0.20.0
+  name: mondooauditconfigs.k8s.mondoo.com
 spec:
-  conversion:
-    strategy: Webhook
-    webhook:
-      clientConfig:
-        service:
-          name: webhook-service
-          namespace: '{{ .Release.Namespace }}'
-          path: /convert
-      conversionReviewVersions:
-      - v1
   group: k8s.mondoo.com
   names:
     kind: MondooAuditConfig
@@ -58,8 +47,8 @@ spec:
                     properties:
                       mode:
                         default: manual
-                        description: CertificateProvisioningMode is the specified method
-                          the cluster uses for provisioning TLS certificates
+                        description: CertificateProvisioningMode is the specified
+                          method the cluster uses for provisioning TLS certificates
                         enum:
                         - cert-manager
                         - openshift
@@ -168,12 +157,12 @@ spec:
                                 spec.nodeName, spec.serviceAccountName, status.hostIP, status.podIP, status.podIPs.
                               properties:
                                 apiVersion:
-                                  description: Version of the schema the FieldPath is
-                                    written in terms of, defaults to "v1".
+                                  description: Version of the schema the FieldPath
+                                    is written in terms of, defaults to "v1".
                                   type: string
                                 fieldPath:
-                                  description: Path of the field to select in the specified
-                                    API version.
+                                  description: Path of the field to select in the
+                                    specified API version.
                                   type: string
                               required:
                               - fieldPath
@@ -197,7 +186,7 @@ spec:
                                     does not exist, then the env var is not published.
                                     If optional is set to true and the specified key does not exist,
                                     the environment variable will not be set in the Pod's containers.
-  
+
                                     If optional is set to false and the specified key does not exist,
                                     an error will be returned during Pod creation.
                                   type: boolean
@@ -229,8 +218,8 @@ spec:
                                   anyOf:
                                   - type: integer
                                   - type: string
-                                  description: Specifies the output format of the exposed
-                                    resources, defaults to "1"
+                                  description: Specifies the output format of the
+                                    exposed resources, defaults to "1"
                                   pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                   x-kubernetes-int-or-string: true
                                 resource:
@@ -241,7 +230,8 @@ spec:
                               type: object
                               x-kubernetes-map-type: atomic
                             secretKeyRef:
-                              description: Selects a key of a secret in the pod's namespace
+                              description: Selects a key of a secret in the pod's
+                                namespace
                               properties:
                                 key:
                                   description: The key of the secret to select from.  Must
@@ -277,10 +267,10 @@ spec:
                         description: |-
                           Claims lists the names of resources, defined in spec.resourceClaims,
                           that are used by this container.
-  
+
                           This field depends on the
                           DynamicResourceAllocation feature gate.
-  
+
                           This field is immutable. It can only be set for containers.
                         items:
                           description: ResourceClaim references one entry in PodSpec.ResourceClaims.
@@ -372,8 +362,8 @@ spec:
                     type: string
                 type: object
               mondooCredsSecretRef:
-                description: Config is an example field of MondooAuditConfig. Edit mondooauditconfig_types.go
-                  to remove/update
+                description: Config is an example field of MondooAuditConfig. Edit
+                  mondooauditconfig_types.go to remove/update
                 properties:
                   name:
                     default: ""
@@ -465,12 +455,12 @@ spec:
                                 spec.nodeName, spec.serviceAccountName, status.hostIP, status.podIP, status.podIPs.
                               properties:
                                 apiVersion:
-                                  description: Version of the schema the FieldPath is
-                                    written in terms of, defaults to "v1".
+                                  description: Version of the schema the FieldPath
+                                    is written in terms of, defaults to "v1".
                                   type: string
                                 fieldPath:
-                                  description: Path of the field to select in the specified
-                                    API version.
+                                  description: Path of the field to select in the
+                                    specified API version.
                                   type: string
                               required:
                               - fieldPath
@@ -494,7 +484,7 @@ spec:
                                     does not exist, then the env var is not published.
                                     If optional is set to true and the specified key does not exist,
                                     the environment variable will not be set in the Pod's containers.
-  
+
                                     If optional is set to false and the specified key does not exist,
                                     an error will be returned during Pod creation.
                                   type: boolean
@@ -526,8 +516,8 @@ spec:
                                   anyOf:
                                   - type: integer
                                   - type: string
-                                  description: Specifies the output format of the exposed
-                                    resources, defaults to "1"
+                                  description: Specifies the output format of the
+                                    exposed resources, defaults to "1"
                                   pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                   x-kubernetes-int-or-string: true
                                 resource:
@@ -538,7 +528,8 @@ spec:
                               type: object
                               x-kubernetes-map-type: atomic
                             secretKeyRef:
-                              description: Selects a key of a secret in the pod's namespace
+                              description: Selects a key of a secret in the pod's
+                                namespace
                               properties:
                                 key:
                                   description: The key of the secret to select from.  Must
@@ -584,10 +575,10 @@ spec:
                         description: |-
                           Claims lists the names of resources, defined in spec.resourceClaims,
                           that are used by this container.
-  
+
                           This field depends on the
                           DynamicResourceAllocation feature gate.
-  
+
                           This field is immutable. It can only be set for containers.
                         items:
                           description: ResourceClaim references one entry in PodSpec.ResourceClaims.
@@ -715,12 +706,12 @@ spec:
                                 spec.nodeName, spec.serviceAccountName, status.hostIP, status.podIP, status.podIPs.
                               properties:
                                 apiVersion:
-                                  description: Version of the schema the FieldPath is
-                                    written in terms of, defaults to "v1".
+                                  description: Version of the schema the FieldPath
+                                    is written in terms of, defaults to "v1".
                                   type: string
                                 fieldPath:
-                                  description: Path of the field to select in the specified
-                                    API version.
+                                  description: Path of the field to select in the
+                                    specified API version.
                                   type: string
                               required:
                               - fieldPath
@@ -744,7 +735,7 @@ spec:
                                     does not exist, then the env var is not published.
                                     If optional is set to true and the specified key does not exist,
                                     the environment variable will not be set in the Pod's containers.
-  
+
                                     If optional is set to false and the specified key does not exist,
                                     an error will be returned during Pod creation.
                                   type: boolean
@@ -776,8 +767,8 @@ spec:
                                   anyOf:
                                   - type: integer
                                   - type: string
-                                  description: Specifies the output format of the exposed
-                                    resources, defaults to "1"
+                                  description: Specifies the output format of the
+                                    exposed resources, defaults to "1"
                                   pattern: ^(\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))(([KMGTPE]i)|[numkMGTPE]|([eE](\+|-)?(([0-9]+(\.[0-9]*)?)|(\.[0-9]+))))?$
                                   x-kubernetes-int-or-string: true
                                 resource:
@@ -788,7 +779,8 @@ spec:
                               type: object
                               x-kubernetes-map-type: atomic
                             secretKeyRef:
-                              description: Selects a key of a secret in the pod's namespace
+                              description: Selects a key of a secret in the pod's
+                                namespace
                               properties:
                                 key:
                                   description: The key of the secret to select from.  Must
@@ -856,10 +848,10 @@ spec:
                         description: |-
                           Claims lists the names of resources, defined in spec.resourceClaims,
                           that are used by this container.
-  
+
                           This field depends on the
                           DynamicResourceAllocation feature gate.
-  
+
                           This field is immutable. It can only be set for containers.
                         items:
                           description: ResourceClaim references one entry in PodSpec.ResourceClaims.
@@ -942,12 +934,12 @@ spec:
                         limit for a Pod
                       type: string
                     message:
-                      description: Message is a human-readable message indicating details
-                        about the last transition
+                      description: Message is a human-readable message indicating
+                        details about the last transition
                       type: string
                     reason:
-                      description: Reason is a unique, one-word, CamelCase reason for
-                        the condition's last transition
+                      description: Reason is a unique, one-word, CamelCase reason
+                        for the condition's last transition
                       type: string
                     status:
                       description: Status is the status of the condition
@@ -976,9 +968,3 @@ spec:
     storage: true
     subresources:
       status: {}
-status:
-  acceptedNames:
-    kind: ""
-    plural: ""
-  conditions: []
-  storedVersions: []
